# GEOsphere

./: .gitignore  LICENSE  README.md  install-skill.ps1  install-skill.sh  pyproject.toml
geosphere/: SKILL.md
geosphere/agents/: content-review.md  entity-review.md  executive-synthesis.md  schema-review.md  technical-review.md
src/geosphere/: __main__.py  benchmark.py  cli.py  compare.py  contracts.py  discovery.py  engine.py  external_authority.py  helpers.py  installer.py  llms_text.py  pdf_report.py  planning.py  reporting.py  settings.py  storage.py
src/geosphere/analyzers/: content.py  entity.py  platforms.py  schema.py  technical.py
src/geosphere/collector/: http_probe.py  render_probe.py  robots.py  sitemap.py
src/geosphere_audit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_engine.py
