[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geosphere-audit"
version = "0.1.0"
description = "Independent GEO auditing engine with deterministic collection, scoring, and reporting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12.0,<5.0.0",
  "lxml>=5.0.0,<7.0.0",
  "requests>=2.32.0,<3.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0"
]
render = [
  "playwright>=1.56.0,<2.0.0"
]
pdf = [
  "reportlab>=4.0.0,<5.0.0",
  "matplotlib>=3.8.0,<4.0.0"
]

[project.scripts]
geosphere = "geosphere.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
